welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: not found: value getGridHeigt
      getGridHeigt()
      ^